# ChangeLog for sys-kernel/genkernel
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.226 2011/01/07 03:22:42 sping Exp $

*genkernel-99999 (07 Jan 2011)

  07 Jan 2011; Sebastian Pipping <sping@gentoo.org>
  genkernel-3.4.10.908.ebuild, genkernel-9999.ebuild, +genkernel-99999.ebuild:
  Remove traces of svn, add 99999er ebuild to enable people to test our
  experimental branch

*genkernel-3.4.10.908 (25 Dec 2010)

  25 Dec 2010; Sebastian Pipping <sping@gentoo.org>
  genkernel-3.4.10.906.ebuild, genkernel-3.4.10.907.ebuild,
  genkernel-3.4.10.907-r1.ebuild, +genkernel-3.4.10.908.ebuild,
  genkernel-9999.ebuild:
  Bump to 3.4.10.908, fix Git URIs, sync ebuilds of 3.4.10.908 and 9999

*genkernel-3.4.10.907-r1 (29 Nov 2010)

  29 Nov 2010; <sping@gentoo.org> +files/busybox-1.7.4-make-3.82.patch,
  +genkernel-3.4.10.907-r1.ebuild:
  Integrate patch allowing compilation of busybox 1.7.4 with make 3.82 (bug
  #341943)

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  -genkernel-3.4.10.904.ebuild, -genkernel-3.4.10.905.ebuild,
  genkernel-3.4.10.907.ebuild, genkernel-9999.ebuild:
  Mark 907 stable, fix repository of 9999

*genkernel-3.4.10.907 (17 Dec 2009)

  17 Dec 2009; Robin H. Johnson <robbat2@gentoo.org>
  +genkernel-3.4.10.907.ebuild:
  New release of genkernel, now with iscsi support.

  17 Dec 2009; Robin H. Johnson <robbat2@gentoo.org> genkernel-9999.ebuild:
  Fix the MY_HOME variable in the live-sources ebuild.

  17 Dec 2009; Robin H. Johnson <robbat2@gentoo.org>
  genkernel-3.4.10.906.ebuild:
  Mass-stabilization of the newer genkernel snapshot (bug #225249).

  21 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> genkernel-9999.ebuild:
  iSCSI support now in the Git tree.

*genkernel-3.4.10.906 (05 Aug 2009)

  05 Aug 2009; Andrew Gaffney <agaffney@gentoo.org>
  +genkernel-3.4.10.906.ebuild:
  Bump sys-kernel/genkernel to 3.4.10.906
