@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/genkernel
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.226 2011/01/07 03:22:42 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.227 2011/01/07 16:20:57 sping Exp $
+
+  07 Jan 2011; Sebastian Pipping <sping@gentoo.org>
+  genkernel-3.4.10.908.ebuild, genkernel-9999.ebuild, genkernel-99999.ebuild:
+  Add build dep on asciidoc for live ebuilds
 
 *genkernel-99999 (07 Jan 2011)
 
